fixing input styling issues on iOS

--- a/style.css
+++ b/style.css
@@ -6,6 +6,15 @@
     box-sizing: border-box;
 }
 
+input, button {
+    font-family: inherit;
+    font-size: 100%;
+}
+
+input[type="text"] {
+    padding: 10px;
+}
+
 body {
     font-family: "Roboto", sans-serif;
     background-color: #f0eef1;
@@ -98,7 +107,7 @@ label {
 
 li :nth-child(2), form button {
     width: 100%;
-    height: 2rem;
+    height: 2.5rem;
     box-sizing: border-box;
     padding: 0;
 }
@@ -107,7 +116,7 @@ li :nth-child(2) {
     border: 2px solid rebeccapurple;
     border-radius: 5px;
     height: 1.5rem;
-    padding: 0 5px;
+    padding: 12px 5px;
 }
 
 li :nth-child(2):focus {
@@ -204,6 +213,7 @@ input:invalid:not(:placeholder-shown) {
 
 .book-read {
     background-color: #9fff9c;
+    font-weight: 500;
 }
 
 .book-card .book-read:hover {
@@ -212,6 +222,7 @@ input:invalid:not(:placeholder-shown) {
 
 .not-read {
     background-color: #D55C5F;
+    font-weight: 500;
 }
 
 .not-read:hover {
